CSS fix for dark mode

--- a/appserver/static/visualizations/performance_analysis/visualization.css
+++ b/appserver/static/visualizations/performance_analysis/visualization.css
@@ -13,7 +13,7 @@ background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(196,196,196
 background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgb(204, 204, 204) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#c4c4c4',GradientType=0 ); /* IE6-9 */
 }
-table.performance_analysis td.item_name{width: 1%;white-space:nowrap;font-size: 1em; padding-left: 8px; padding-right: 8px;text-align:left;}
+table.performance_analysis td.item_name{width: 1%;white-space:nowrap;font-size: 1em; padding-left: 8px; padding-right: 8px;text-align:left;color:black;}
 table.performance_analysis td{white-space: nowrap;}
 table.performance_analysis td.time{font-size: 0.8em;text-align:center;font-weight:bold;border:1px solid #999999!important;border-bottom-left-radius:0px!important;border-bottom-right-radius:0px!important;border-radius: 5px;background-color:#cccccc!important;box-shadow: inset 0 0 0 1000px rgba(254,255,255,.5);}
 table.performance_analysis td.ok { border: 1px solid #efefef;background: #5cc05c; }
@@ -26,7 +26,7 @@ table.performance_analysis td.error_50 { background: url(/static/app/performance
 table.performance_analysis td.error_30 { background: url(/static/app/performance-analysis/images/error_30.png) no-repeat center top; }
 table.performance_analysis td.error_70 { background: url(/static/app/performance-analysis/images/error_70.png) no-repeat center top; }
 table.performance_analysis td.error_90 { background: url(/static/app/performance-analysis/images/error_90.png) no-repeat center top; }
-table.performance_analysis td.time { background-color: #f1f1f1;}
+table.performance_analysis td.time { color:black;background-color: #f1f1f1;}
 table.performance_analysis td.downtime { background: url(/static/app/performance-analysis/images/downtime.gif) repeat;}
 table.performance_analysis td{border-radius:5px; border:none!important;}
 table.performance_analysis_legend{background: none!important; border: 1px solid #efefef!important;width:auto!important;display:none;}
